Material tab disappears #80651

Closed
opened 2020-09-10 02:01:08 +02:00 by Zachary · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-09 20:10, hash: 0721fbb6e1

Short description of error
Material tab disappears when adding new object or adding new material on default cube.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-09 20:10, hash: `0721fbb6e1` **Short description of error** Material tab disappears when adding new object or adding new material on default cube.
Author

Added subscriber: @AFWS

Added subscriber: @AFWS

Added subscriber: @bent

Added subscriber: @bent

I have this issue aswell on the latest buildbot build (images are missing because of #80327)
image.png

I have this issue aswell on the latest buildbot build (images are missing because of #80327) ![image.png](https://archive.blender.org/developer/F8860081/image.png)

Added subscriber: @chr.schmitz

Added subscriber: @chr.schmitz

Added subscribers: @ZedDB, @rjg

Added subscribers: @ZedDB, @rjg

This appears to be caused by commit 8bead3df2f, but I'll have to take another look because the added check seems to be correct at first glance. @ZedDB

This appears to be caused by commit 8bead3df2f, but I'll have to take another look because the added check seems to be correct at first glance. @ZedDB

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @brecht

Added subscriber: @brecht

The check is not correct. The return value does not indicate if there is a material, but rather if there could be a material and the material tab needs to be shown.

The check is not correct. The return value does not indicate if there is a material, but rather if there could be a material and the material tab needs to be shown.
Sebastian Parborg was assigned by Brecht Van Lommel 2020-09-10 12:49:49 +02:00

ma in buttons_context_path_material (buttons_context.c ) is NULL e.g. when removing a material from a material slot. The material tab still needs to be displayed in this case. So the check in itself is fine, but the return value is wrong.

`ma` in `buttons_context_path_material` ([buttons_context.c ](https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_buttons/buttons_context.c)) is `NULL` e.g. when removing a material from a material slot. The material tab still needs to be displayed in this case. So the check in itself is fine, but the return value is wrong.

This issue was referenced by 0f0e7239f0

This issue was referenced by 0f0e7239f02720a4077ee10dea0e3de6e605417d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80651
No description provided.