Fix T80651: Material tab disappears

Always return true if the object can have materials. Even if there are
not currently any materials assigned to the object.