source/blender/editors/space_buttons/buttons_context.c
@@ -333,11 +333,10 @@ static bool buttons_context_path_material(ButsContextPath *path)
 
     if (ob && OB_TYPE_SUPPORT_MATERIAL(ob->type)) {
       ma = BKE_object_material_get(ob, ob->actcol);
-      if (ma == NULL) {
-        return false;
+      if (ma != NULL) {
+        RNA_id_pointer_create(&ma->id, &path->ptr[path->len]);
+        path->len++;
       }
-      RNA_id_pointer_create(&ma->id, &path->ptr[path->len]);
-      path->len++;
       return true;
     }
   }
